Вторая крутая версия

--- a/tests4apv2.html
+++ b/tests4apv2.html
@@ -8,8 +8,11 @@
 <body>
 <table id="suiteTable" cellpadding="1" cellspacing="1" border="1" class="selenium"><tbody>
 <tr><td><b>Test Suite</b></td></tr>
-<tr><td><a href="mainpage">mainpage[Open-Check-Fill-WaitForSuggs-SelectSugg-WaitForResults-ClickonResult-GoToResult]</a></td></tr>
-<tr><td><a href="login">login[CreateNew-Login-Logout-Login]</a></td></tr>
+<tr><td><a href="testmainpage.html">Test Main Page</a></td></tr>
+<tr><td><a href="testsearchform.html">Test Search Form</a></td></tr>
+<tr><td><a href="testresultpage.html">Test Result Page</a></td></tr>
+<tr><td><a href="testnewcustomerlinkonmainpage.html">Test Login Form - we have not user</a></td></tr>
+<tr><td><a href="testloginformonmainpage.html">Test Login Form - we have user</a></td></tr>
 </tbody></table>
 </body>
 </html>
