Сделано прокликивание пунктов меню с главной страницы

--- a/testmainpage.html
+++ b/testmainpage.html
@@ -92,6 +92,32 @@
 	<td>class=business_lists</td>
 	<td></td>
 </tr>
+<!--Прокликиваем пункты меню в шапке-->
+<tr>
+	<td>clickAndWait</td>
+	<td>css=img[alt=&quot;AppointmentPro&quot;]</td>
+	<td></td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>link=About AppointmentPro</td>
+	<td></td>
+</tr>
+<tr>
+	<td>goBackAndWait</td>
+	<td></td>
+	<td></td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>link=FAQ &amp; Help</td>
+	<td></td>
+</tr>
+<tr>
+	<td>goBackAndWait</td>
+	<td></td>
+	<td></td>
+</tr>
 
 </tbody></table>
 </body>
