Сделано добавление дополнительного емейла на странице профиля пользователя

--- a/tests4apv2.html
+++ b/tests4apv2.html
@@ -11,8 +11,9 @@
 <tr><td><a href="testmainpage.html">Test Main Page</a></td></tr>
 <tr><td><a href="testsearchform.html">Test Search Form</a></td></tr>
 <tr><td><a href="testresultpage.html">Test Result Page</a></td></tr>
-<tr><td><a href="testnewcustomerlinkonmainpage.html">Test Login Form - we have not user</a></td></tr>
-<tr><td><a href="testloginformonmainpage.html">Test Login Form - we have user</a></td></tr>
+<tr><td><a href="testnewcustomerlinkonmainpage.html">Test Login Form - register both kind of users</a></td></tr>
+<tr><td><a href="testloginformonmainpage.html">Test Login Form - authorize both kind of users</a></td></tr>
+<tr><td><a href="testprofilepage.html">Test Profile Page</a></td></tr>
 </tbody></table>
 </body>
 </html>
