--- a/testloginformonmainpage.html
+++ b/testloginformonmainpage.html
@@ -4,12 +4,12 @@
 <head profile="http://selenium-ide.openqa.org/profiles/test-case">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <link rel="selenium.base" href="http://127.0.0.1:8080/" />
-<title>Test Login Form - we have user</title>
+<title>Test Login Form - authorize both kind of users</title>
 </head>
 <body>
 <table cellpadding="1" cellspacing="1" border="1">
 <thead>
-<tr><td rowspan="1" colspan="3">Test Login Form - we have user</td></tr>
+<tr><td rowspan="1" colspan="3">Test Login Form - authorize both kind of users</td></tr>
 </thead><tbody>
 <!--Логинимся и проверяем простого кастомера-->
 <tr>
