--- a/testmainpage.html
+++ b/testmainpage.html
@@ -16,7 +16,7 @@
 	<td></td>
 	<td></td>
 </tr>
-<!--Открываем главную страинцу и проверяем обязательные элементы-->
+<!--Открываем главную страницу и проверяем обязательные элементы-->
 <tr>
 	<td>open</td>
 	<td>http://127.0.0.1:8080/</td>
@@ -118,7 +118,6 @@
 	<td></td>
 	<td></td>
 </tr>
-
 </tbody></table>
 </body>
 </html>
