--- a/testprofilepage.html
+++ b/testprofilepage.html
@@ -463,6 +463,91 @@
 	<td>id=notify_new</td>
 	<td></td>
 </tr>
+<tr>
+	<td>click</td>
+	<td>css=button:contains('Save notification settings')</td>
+	<td></td>
+</tr>
+<tr>
+	<td>waitForElementPresent</td>
+	<td>css=div:contains('At least one delivery method needs to be checked if you would like to receive notifications')</td>
+	<td></td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>name=new_web</td>
+	<td></td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>css=button:contains('Save notification settings')</td>
+	<td></td>
+</tr>
+<tr>
+	<td>waitForElementPresent</td>
+	<td>css=div:contains('Notification Settings Were Successfully Saved')</td>
+	<td></td>
+</tr>
+<tr>
+	<td>refreshAndWait</td>
+	<td></td>
+	<td></td>
+</tr>
+<tr>
+	<td>assertChecked</td>
+	<td>name=new_web</td>
+	<td></td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>name=new_email</td>
+	<td></td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>css=button:contains('Save notification settings')</td>
+	<td></td>
+</tr>
+<tr>
+	<td>waitForElementPresent</td>
+	<td>css=div:contains('Notification Settings Were Successfully Saved')</td>
+	<td></td>
+</tr>
+<tr>
+	<td>refreshAndWait</td>
+	<td></td>
+	<td></td>
+</tr>
+<tr>
+	<td>assertChecked</td>
+	<td>name=new_email</td>
+	<td></td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>name=new_sms</td>
+	<td></td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>css=button:contains('Save notification settings')</td>
+	<td></td>
+</tr>
+<tr>
+	<td>waitForElementPresent</td>
+	<td>css=div:contains('Notification Settings Were Successfully Saved')</td>
+	<td></td>
+</tr>
+<tr>
+	<td>refreshAndWait</td>
+	<td></td>
+	<td></td>
+</tr>
+<tr>
+	<td>assertChecked</td>
+	<td>name=new_sms</td>
+	<td></td>
+</tr>
 </tbody></table>
 </body>
 </html>
